--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "mockingcase",
   "version": "0.0.0",
   "description": "Convert a string to mOcKiNgCaSe",
+  "homepage": "https://github.com/strdr4605/mockingcase.git",
+  "bugs": {
+    "url": "https://github.com/strdr4605/mockingcase/issues",
+    "email": "str.dr4605@gmail.com"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
