Add declaration file for typescript (#15)
* Close #14 Add declaration file for typescript

* add index.d.ts to files

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "str.dr4605@gmail.com"
   },
   "main": "index.js",
+  "types": "index.d.ts",
   "engines": {
     "node": ">=6"
   },
@@ -15,6 +16,7 @@
     "test": "jest"
   },
   "files": [
+    "index.d.ts",
     "index.js"
   ],
   "keywords": [
